Made changes to the SnipCart theme, added variables for SnipCart API keys. Finalized ordering process.

--- a/src/scss/global/btn.scss
+++ b/src/scss/global/btn.scss
@@ -68,6 +68,7 @@
 .btn-outline-tertiary {
   color: $ruby;
   border-color: $ruby;
+  background-color: transparent;
 }
 
 .btn-outline-tertiary:visited {
