--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -51,6 +51,7 @@
 // **************************************************************************
 
 @import 'components/main-navigation';
+@import 'components/snipcart';
 @import 'components/hero';
 @import 'components/contact-banner';
 @import 'components/footer';
