--- a/src/templates/become-a-sponsor.html
+++ b/src/templates/become-a-sponsor.html
@@ -123,6 +123,9 @@ permalink: become-a-sponsor/
         </button>
       </li>
     </ul>
+    <p class="pricing-asterisk">
+      All sponsorship dollars contribute to our monthly event and operating costs. Cancel anytime. Funds administered by <a href="http://techtoledo.com/">Tech Toledo</a>.
+    </p>
     <div class="row justify-content-between">
       <div class="col-lg-5 col-sm-6">
         <h5 class="text-primary">
