--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -62,3 +62,10 @@
 @import 'components/image-frame';
 @import 'components/social-media-list';
 @import 'components/page-header';
+
+@import 'components/introductory-slides/introductory-slide';
+@import 'components/introductory-slides/welcome-slide';
+@import 'components/introductory-slides/title-slide';
+@import 'components/introductory-slides/service-slide';
+@import 'components/introductory-slides/upcoming-events-slide';
+@import 'components/introductory-slides/connect-slide';
