--- a/src/scss/settings.scss
+++ b/src/scss/settings.scss
@@ -9,6 +9,14 @@ $purple: #bc2375;
 $danger: #da3849;
 
 
+
+$brand-meetup: #e0393e;
+$brand-facebook: #3b5998;
+$brand-instagram: #262626;
+$brand-github: #333;
+$brand-twitter: #1da1f2;
+$brand-linkedin: #0077b5;
+
 $breakpoints: (
   xs: 0,
   sm: 576px,
