--- a/src/templates/become-a-sponsor.html
+++ b/src/templates/become-a-sponsor.html
@@ -4,7 +4,8 @@ description: "Become a sponsor! Toledo Web Professionals organizes free, open ne
 permalink: become-a-sponsor/
 ---
 
-{% include header.html %}
+{% include head.html %}
+{% include main-navigation.html %}
 
 <div class="page-header">
   <div class="container">
@@ -155,4 +156,5 @@ permalink: become-a-sponsor/
   </div>
 </div>
 
+{% include footer-navigation.html %}
 {% include footer.html %}
