--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -69,3 +69,5 @@
 @import 'components/introductory-slides/service-slide';
 @import 'components/introductory-slides/upcoming-events-slide';
 @import 'components/introductory-slides/connect-slide';
+@import 'components/introductory-slides/you-will-do-better-slide';
+@import 'components/introductory-slides/introductory-slide-controls';
