--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,8 +4,8 @@ description: "Toledo Web Professionals organizes free, open networking meetups e
 homepage: true
 ---
 
-{% include head.html %}
-{% include main-navigation.html %}
+{% include global/head.html %}
+{% include global/main-navigation.html %}
 
 <div class="hero">
   <div class="container">
@@ -115,5 +115,5 @@ homepage: true
   </div>
 </div>
 
-{% include footer-navigation.html %}
-{% include footer.html %}
+{% include global/footer-navigation.html %}
+{% include global/footer.html %}
