Fixes to meetup RSVP buttons.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,7 +15,7 @@ homepage: true
       fostering an environment of collaboration, and building a community of technical, design, and business talent
       in Toledo.
     </h3>
-    <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.meetup}}">
+    <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.options.meetup}}">
       Join & RSVP on
       <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
     </a>
