--- a/src/templates/_includes/global/footer-navigation.html
+++ b/src/templates/_includes/global/footer-navigation.html
@@ -1,5 +1,5 @@
 <div class="section-tertiary text-center contact-banner" id="contact">
-  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.meetup}}">
+  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="{{site.data.contact.options.meetup}}">
     Join & RSVP on
     <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
   </a>
