--- a/src/templates/_includes/introductory-slides/title-slide.html
+++ b/src/templates/_includes/introductory-slides/title-slide.html
@@ -1,6 +1,6 @@
 <div class="carousel-item {% if include.active %}active{% endif%}">
   <div class="introductory-slide title-slide">
-    <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
+    <img src="/assets/img/logos/wp-toledo-logo-w.svg" alt="Wordpress Toledo" class="title-slide-logo" />
     <h1 class="title-slide-title">{{page.event.title}}</h1>
     <ul class="title-slide-speakers">
       {% for speaker in page.event.speakers %}
@@ -14,5 +14,6 @@
         </li>
       {% endfor %}
     </ul>
+
   </div>
 </div>
