--- a/src/templates/intro-slides.html
+++ b/src/templates/intro-slides.html
@@ -13,6 +13,9 @@ upcoming:
  - title: 2017 Tech Toledo Holiday Mixer
    date: December 7, 2017
    info: techtoledo.com
+ - title: Building Your Own Collaborative Editing Web Forms For Free
+   date: November 9, 2017
+   info: toledowebprofessionals.com
  - title: The Cybersecurity Roadshow
    date: January 10, 2018
    info: toledowebprofessionals.com
