Updated all dependencies, ensured build integrity was maintained.

--- a/src/templates/intro-slides.html
+++ b/src/templates/intro-slides.html
@@ -4,18 +4,15 @@ description: "Introductory slides for Toledo Web Professionals events."
 permalink: intro-slides/
 
 event:
-  title: Harness the Power of Mentorship
+  title: Building Your Own Collaborative Editing Web Forms For Free
   speakers:
-     - name: Erika Ritter
-       description: Freelance Frontend Developer
+     - name: Dave Johnson
+       description: Software Developer at Hyundai MOBIS
 
 upcoming:
  - title: 2017 Tech Toledo Holiday Mixer
    date: December 7, 2017
    info: techtoledo.com
- - title: Building Your Own Collaborative Editing Web Forms For Free
-   date: November 9, 2017
-   info: toledowebprofessionals.com
  - title: The Cybersecurity Roadshow
    date: January 10, 2018
    info: toledowebprofessionals.com
