Added sponsorship logos/styling.

--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -62,6 +62,7 @@
 @import 'components/image-frame';
 @import 'components/social-media-list';
 @import 'components/page-header';
+@import 'components/sponsor-list';
 
 @import 'components/introductory-slides/introductory-slide';
 @import 'components/introductory-slides/welcome-slide';
