Fixed another small email issue, added Launchpad as a sponsor.

--- a/src/templates/become-a-sponsor.html
+++ b/src/templates/become-a-sponsor.html
@@ -219,7 +219,7 @@ permalink: become-a-sponsor/
           Questions? Need Help Deciding?
         </h5>
         <p>
-          Email us online at <a href="mailto:{{site.data.contact.email}}">{{site.data.contact.email}}</a> and a member
+          Email us online at <a href="{{site.data.contact.options.envelope}}">{{site.data.contact.options.envelope | remove: "mailto:"}}</a> and a member
           of our leadership team will help customize your sponsorship experience. We can’t wait to connect you to
           Toledo’s premier technology community!
         </p>
