--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -119,6 +119,9 @@ homepage: true
       <a class="sponsor-list-item" href="http://www.spokehq.com/">
         <img src="/assets/img/logos/spoke.svg" width="180" alt="Spoke HQ" />
       </a>
+      <a class="sponsor-list-item" href="http://www.utoledo.edu/incubator/">
+        <img src="/assets/img/logos/ut-launchpad-incubation.png" width="220" alt="UT Launchpad Incubation" />
+      </a>
       <a class="sponsor-list-item" href="http://www.seedcoworking.com/">
         <img src="/assets/img/logos/seed-coworking.svg" width="130" alt="Seed Coworking" />
       </a>
