Added MaritzCX logo.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -116,6 +116,9 @@ homepage: true
     </p>
     <br />
     <div class="sponsor-list">
+      <a class="sponsor-list-item" href="https://www.maritzcx.com/">
+        <img src="/assets/img/logos/maritzcx.svg" width="180" alt="MaritzCX" />
+      </a>
       <a class="sponsor-list-item" href="http://www.spokehq.com/">
         <img src="/assets/img/logos/spoke.svg" width="180" alt="Spoke HQ" />
       </a>
