--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -66,6 +66,7 @@
 
 @import 'components/introductory-slides/introductory-slide';
 @import 'components/introductory-slides/welcome-slide';
+@import 'components/introductory-slides/sponsors-slide';
 @import 'components/introductory-slides/title-slide';
 @import 'components/introductory-slides/service-slide';
 @import 'components/introductory-slides/upcoming-events-slide';
