--- a/src/templates/_includes/introductory-slides/title-slide.html
+++ b/src/templates/_includes/introductory-slides/title-slide.html
@@ -14,6 +14,8 @@
         </li>
       {% endfor %}
     </ul>
+    <br />
+    <img src="/assets/img/logos/coder-scoop.svg" width="220" alt="Coder Scoop" />
 
   </div>
 </div>
